--- a/index.html
+++ b/index.html
@@ -56,13 +56,15 @@
           <h1>Personal Website</h1>
           <div class="about_me">
             <img src="/img/me.jpg" alt="my photo" class="my_photo" />
-            <h2>About me</h2>
-            <p class="my_info">
-              Hi! I'm Vladislav. I have been learning web development recently.
-              I like to learn something new, I like to communicate with people
-              and computers. I want to develop the skills I need and become
-              full-fledget web developer.
-            </p>
+            <div class="my_info">
+              <h2>About me</h2>
+              <p>
+                Hi! I'm Vladislav. I have been learning web development
+                recently. I like to learn something new, I like to communicate
+                with people and computers. I want to develop the skills I need
+                and become full-fledget web developer.
+              </p>
+            </div>
           </div>
           <div class="my_hobbies">
             <h2>My hobbies:</h2>
